# rlt_bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docker-entrypoint-initdb.d/: mongo-init.js
src/: __init__.py  main.py
src/core/: __init__.py  container.py  settings.py
src/handler/: __init__.py
src/handler/v1/: echo_handler.py  start_handler.py
src/infrastructure/repositories/: __init__.py  abstract.py  mongo_repository.py
src/services/entities/: __init__.py  aggregate_entities_.py
src/services/use_cases/: __init__.py  aggregate_data_use_case.py
src/utils/: helper.py
