[tool.poetry]
name = "rlt-tg-bot"
version = "0.1.0"
description = "тестовое задание для \"RLT (ООО Надежные Лояльные Технологии)\""
authors = ["NicholasNartikoev <nartikoevnikolai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.1"
pydantic-settings = "^2.0.3"
aiogram = "^3.1.1"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
